tests/matrices/invalid/invalid_bad_object.mtx
%%MatrixMarket ___ coordinate real general
% invalid object type
4 4 0
